--- a/about.html
+++ b/about.html
@@ -14,15 +14,49 @@
 
   gtag('config', 'UA-160850625-1');
 </script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <div class="header" id = "header"></div>
+
+
+
 </head>
 
 <body>
+  <div class="flex-container">
   <div>
-    Hello, My name is  Greta and I am a MSI grad student at the University of Michigan School of Information.
-    <!--<img src="images/ireland.jpg" alt="ireland"/>-->
+Hello, My name is  Greta
+
+    I am a student at the Univeristy of Michigan
+earning my Master’s in UX Research & Design.
+I intially started the Digital Curation path but
+after I learned about user experience and user
+research I knew I had to change over to the UX
+field.
+
+I am passionate about undersanding how
+people engage with technolgy and designing
+better interaction experiences. As a student I
+love to learn and am always curious about new
+ideas and current trends. Skills Learned:
+<ul>
+• research techniques
+• user modeling (persona and scenario creation)
+• product design
+• interaction design
+• interface design
+• information architecture
+</ul>
+
+    <!--<img src="images/ireland.jpg" alt="ireland"
+    <img src="images/my_wrkspace.jpg" alt="contact";>
+    <img src="images/3rdbday.jpg" alt="contact";>
+    <img src="images/mygirls.jpg" alt="contact";>
+    <img src="images/cupcakes.jpg" alt="contact";>
+    <img src="images/pirates.jpg" alt="contact";>/>-->
   </div>
+
+
 
   <div class="flip-card">
     <div class="flip-card-inner">
@@ -39,12 +73,27 @@
       </div>
     </div>
   </div>
+</div>
+
+<section id="photos">
+
+
+
+
+
+</section>
+
+
+
+</style>
 </body>
 
 <div id="footer" class="footer"></div>
 
 <script type="text/javascript" src="js/header.js"></script>
 <script type="text/javascript" src="js/footer.js"></script>
+<script type="text/javascript" src="js/about.js"></script>
+
 <script async="" src="https://www.google-analytics.com/analytics.js"></script>
 
 </html>
