--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	  width: auto;
 	  padding: 16px;
 	  margin-top: -22px;
-	  color: white;
+	  color: grey;
 		background-color: rgba(0,0,0,0.8);
 	  font-weight: bold;
 	  font-size: 18px;
@@ -61,8 +61,8 @@
 
 	/* Caption text */
 	.text {
-	  color: #f2f2f2;
-	  font-size: 15px;
+	  color: #8c2e2e;
+	  font-size: 16px;
 	  padding: 8px 12px;
 	  position: absolute;
 	  bottom: 8px;
@@ -72,7 +72,7 @@
 
 	/* Number text (1/3 etc) */
 	.numbertext {
-	  color: #f2f2f2;
+	  color: #8c2e2e;
 	  font-size: 12px;
 	  padding: 8px 12px;
 	  position: absolute;
@@ -123,35 +123,46 @@
 <body>
 <h1>  Welcome to my Portfolio
 </h1>
-<h3>Personal Philosophy ...
-</h3>
 
+<p>
+This website is an example of the work I have
+designed as a graduate student at the
+University of Michigan School of Information
+with a focus on UX/UI Research and Design.
+
+</p>
 
 <div class="slideshow-container">
 
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 4</div>
+  <div class="numbertext">1 / 5</div>
   <img id ="peony_collage" src="images/peony_collage.jpg" alt="contact" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text">Peony Poster Collage</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 4</div>
-  <img id="koi_hifidelity" src="images/koi_hifidelity.jpg" alt="method" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="numbertext">2 / 5</div>
+  <img id="koi_hifidelity" src="images/koi_hifidelity.jpg" alt="koifish" style="width:100%">
+  <div class="text">Koi Hifidelity Prototype</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 4</div>
+  <div class="numbertext">3 / 5</div>
   <img id="nishikigoi_wireframes" src="images/nishikigoi_wireframes.jpg" alt="clients" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Koi Wireframes</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">4 / 4</div>
-  <img id="logo_design" src="images/logo_design.jpg" alt="clients" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="numbertext">4 / 5</div>
+  <img id="logo_design" src="images/logo_design.jpg" alt="koi logo" style="width:100%">
+  <div class="text">Logo Design</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">5 / 5</div>
+  <img id="logo_design" src="images/monsteralphabet.jpg" alt="monster alphabet" style="width:100%">
+  <div class="text">Monster Alphabet</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -196,9 +207,6 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
-
-
-
 
 
 </body>
