--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,16 @@
 <div id="header" class="header"></div>
 
 <div class="my-auto">
-          <h2 class="mb-5">Resume</h2>
+          <h2 class="mb-5">
+
+  I graduate from University of Michigan April 2020
+ • I earned a Bachelor’s Degree from University of Detroit
+    Mercy in History and Museum Managment.
+ •  I worked inSpecial Education for 6 years and am in
+    fluent in both Braille languages.
+ • I love design and am still learning but am fairly
+   fluent in Illustrator and Photoshop.
+</h2>
           <p class="mb-0"></p>
           <iframe height="100%" width= "100%" src="images/resume.pdf"></iframe>
         </div>
