--- a/about.html
+++ b/about.html
@@ -18,35 +18,28 @@
 
 <div class="header" id = "header"></div>
 
-
-
 </head>
 
 <body>
   <div class="flex-container">
   <div>
+    <p></p>
 Hello, My name is  Greta
-
-    I am a student at the Univeristy of Michigan
+I am a student at the Univeristy of Michigan
 earning my Master’s in UX Research & Design.
 I intially started the Digital Curation path but
 after I learned about user experience and user
 research I knew I had to change over to the UX
 field.
-
+</p>
+<p>
 I am passionate about undersanding how
-people engage with technolgy and designing
+people engage with technology and designing
 better interaction experiences. As a student I
 love to learn and am always curious about new
-ideas and current trends. Skills Learned:
-<ul>
-• research techniques
-• user modeling (persona and scenario creation)
-• product design
-• interaction design
-• interface design
-• information architecture
-</ul>
+ideas and current trends.
+</p>
+
 
     <!--<img src="images/ireland.jpg" alt="ireland"
     <img src="images/my_wrkspace.jpg" alt="contact";>
@@ -70,12 +63,33 @@ ideas and current trends. Skills Learned:
         <p>UX/UI Research and Design</p>
         <p>I am a big fan of photography,
           sketching and reading comics</p>
+          <ul>
+          • research techniques
+          • user modeling (persona and scenario creation)
+          • product design
+          • interaction design
+          • interface design
+          • information architecture
+          </ul>
       </div>
     </div>
   </div>
 </div>
 
 <section id="photos">
+  <img src="images/my_wrkspace.jpg" alt="contact";>
+  <img src="images/mygirls.jpg" alt="contact";>
+  <img src="images/cupcakes.jpg" alt="contact";>
+  <img src="images/pirates.jpg" alt="contact";>
+  <img src="images/3rdbday.jpg" alt="contact";>
+  <img src="images/twina.jpg" alt="contact";>
+  <img src="images/twinb.jpg" alt="contact";>
+  <img src="images/anbcreek.jpg" alt="contact";>
+  <img src="images/elsaanna.jpg" alt="contact";>
+  <img src="images/notjets.jpg" alt="contact";>
+  <img src="images/hiking.jpg" alt="contact";>
+  <img src="images/whaaat.jpg" alt="contact";>
+  <img src="images/pirates.jpg" alt="contact";>
 
 
 
