--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,20 @@ input[type=submit]:hover {
   <div class="flex-container">
 
   <div>
-      How to contact to me
-      email:gretah@umich.edu
-      github
-      linkedIn
+      <p>
+      Thank you for checking out my website and portfolio work.
+      I enjoy the design process and will be adding more examples
+      of my work periodically, so please come back and take a look.
+      </p>
+
+      <p>
+      Current projects to come are focused on women in technology and
+      mothers juggling grad school and family life.  
+      Feel free to contact me.
+      </p>
     </div>
     <div>
-      <img src="images/volterra_werewolf.jpg" alt="contact" style="width:100%;height:100%;">
+      <img src="images/ireland.jpg" alt="contact" style="width:100%;height:100%;">
         </div>
 </div>
 
