--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<style>
 	* {box-sizing: border-box}
-	body {font-family: Verdana, sans-serif; margin:0}
+	body {font-family: 'Gopher Text', sans-serif; margin:0}
 	.mySlides {display: none}
 	img {vertical-align: middle;}
 
@@ -127,9 +127,12 @@
 <p>
 This website is an example of the work I have
 designed as a graduate student at the
-University of Michigan School of Information
-with a focus on UX/UI Research and Design.
-
+University of Michigan School of Information.
+My focus is on UX/UI Research and Design.
+</p>
+<p>
+Below are some designs I worked on for graphic design and interaction design projects.
+They exhibit work done with Adobe Photoshop, Illustrator and Adobe XD.
 </p>
 
 <div class="slideshow-container">
@@ -137,7 +140,7 @@ with a focus on UX/UI Research and Design.
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 5</div>
-  <img id ="peony_collage" src="images/peony_collage.jpg" alt="contact" style="width:100%">
+  <img id ="peony_collage" src="images/peony_collage.jpg" alt="contact" style="width:65%">
   <div class="text">Peony Poster Collage</div>
 </div>
 
@@ -155,13 +158,13 @@ with a focus on UX/UI Research and Design.
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 5</div>
-  <img id="logo_design" src="images/logo_design.jpg" alt="koi logo" style="width:100%">
+  <img id="logo_design" src="images/logo_design.jpg" alt="koi logo" style="width:70%">
   <div class="text">Logo Design</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">5 / 5</div>
-  <img id="logo_design" src="images/monsteralphabet.jpg" alt="monster alphabet" style="width:100%">
+  <img id="logo_design" src="images/monsteralphabet.jpg" alt="monster alphabet" style="width:80%">
   <div class="text">Monster Alphabet</div>
 </div>
 
