--- a/resume.html
+++ b/resume.html
@@ -15,17 +15,25 @@
 
 <div id="header" class="header"></div>
 
-<div class="my-auto">
-          <h2 class="mb-5">
+<div>
+<p>
+I graduate from University of Michigan April 2020. I earned a Bachelor’s Degree
+from University of Detroit Mercy in History and Museum Managment. After that I
+worked in Special Education for 6 years and am in fluent in both Braille languages.
+</p>
+<p>
+Since then I have developed interests and a passion for the user experience, human computer
+interaction and design. I am still working on developing my CSS3 and Javascript skills as I
+really enjoy what you can do with CSS.
+</p>
+<p>
+Currently I enjoy playing with Illustrator, Photoshop and Adobe XD. I use them for
+art work, wireframes and building hi-fidelity protypes. 
+</p>
+   </div>
 
-  I graduate from University of Michigan April 2020
- • I earned a Bachelor’s Degree from University of Detroit
-    Mercy in History and Museum Managment.
- •  I worked inSpecial Education for 6 years and am in
-    fluent in both Braille languages.
- • I love design and am still learning but am fairly
-   fluent in Illustrator and Photoshop.
-</h2>
+<div class="my-auto">
+          <h2 class="mb-5"></h2>
           <p class="mb-0"></p>
           <iframe height="100%" width= "100%" src="images/resume.pdf"></iframe>
         </div>
