--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 <div class="header" id = "header"></div>
 
 </head>
+<main>
 
 <body>
   <div class="flex-container">
@@ -64,13 +65,13 @@ ideas and current trends.
         <p>I am a big fan of photography,
           sketching and reading comics</p>
           <ul>
-          • research techniques
-          • user modeling (persona and scenario creation)
-          • product design
-          • interaction design
-          • interface design
-          • information architecture
-          </ul>
+          <li>research techniques</li>
+          <li>user modeling (persona and scenario creation)</li>
+          <li>product design</li>
+          <li>interaction design</li>
+          <li>interface design</li>
+        <li>information architecture</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -89,9 +90,7 @@ ideas and current trends.
   <img src="images/notjets.jpg" alt="contact";>
   <img src="images/hiking.jpg" alt="contact";>
   <img src="images/whaaat.jpg" alt="contact";>
-  <img src="images/pirates.jpg" alt="contact";>
-
-
+  <img src="images/volterra_werewolf.jpg" alt="contact";>
 
 
 
@@ -101,7 +100,7 @@ ideas and current trends.
 
 </style>
 </body>
-
+</main>
 <div id="footer" class="footer"></div>
 
 <script type="text/javascript" src="js/header.js"></script>
