--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,6 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<title>Contact</title>
 <head>
   <link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +18,6 @@
 
 <div id="header" class="header"></div>
 <style>
-
 
 input[type=text], select {
   width: 100%;
@@ -48,7 +49,8 @@ textarea, select {
 input[type=submit] {
   width: 200px;
   background-color: #4CAF50;
-  color: white;
+  color: black;
+  font-weight: bold;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -67,9 +69,8 @@ input[type=submit]:hover {
   padding: 20px;
 
 }
-
 </style>
-
+<main>
 <body>
   <div class="flex-container">
 
@@ -82,8 +83,12 @@ input[type=submit]:hover {
 
       <p>
       Current projects to come are focused on women in technology and
-      mothers juggling grad school and family life.  
-      Feel free to contact me.
+      mothers juggling grad school and family life. I am working with
+      other parent-students on creating a more inclusive campus community.
+      </p>
+      <p>
+       For more information on my projects and graphic design projects
+       feel free to connect with me. You can message me below. 
       </p>
     </div>
     <div>
@@ -157,6 +162,7 @@ input[type=submit]:hover {
   }
 </script>
 </body>
+</main>
 <div id="footer" class="footer"></div>
 <script type="text/javascript" src="js/header.js"></script>
 <script type="text/javascript" src="js/footer.js"></script>
