--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<title>Resume</title>
 <head>
   <link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +15,10 @@
 </script>
 
 </head>
-
 <div id="header" class="header"></div>
+<main>
+
+<body>
 
 <div>
 <p>
@@ -28,16 +33,18 @@ really enjoy what you can do with CSS.
 </p>
 <p>
 Currently I enjoy playing with Illustrator, Photoshop and Adobe XD. I use them for
-art work, wireframes and building hi-fidelity protypes. 
+art work, wireframes and building hi-fidelity protypes.
 </p>
    </div>
 
 <div class="my-auto">
-          <h2 class="mb-5"></h2>
+          <h2 class="mb-5">Resume</h2>
           <p class="mb-0"></p>
-          <iframe height="100%" width= "100%" src="images/resume.pdf"></iframe>
+          <iframe title= "Resume" height="900px" width= "900px" style="margin-bottom:60px;" src="images/resume.pdf"></iframe>
         </div>
-
+</body>
+</main>
 <div id="footer" class="footer"></div>
 <script type="text/javascript" src="js/header.js"></script>
 <script type="text/javascript" src="js/footer.js"></script>
+</html>
