--- a/about.html
+++ b/about.html
@@ -42,12 +42,7 @@ ideas and current trends.
 </p>
 
 
-    <!--<img src="images/ireland.jpg" alt="ireland"
-    <img src="images/my_wrkspace.jpg" alt="contact";>
-    <img src="images/3rdbday.jpg" alt="contact";>
-    <img src="images/mygirls.jpg" alt="contact";>
-    <img src="images/cupcakes.jpg" alt="contact";>
-    <img src="images/pirates.jpg" alt="contact";>/>-->
+
   </div>
 
 
@@ -55,7 +50,7 @@ ideas and current trends.
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/ireland.jpg" alt="ireland" style="width:100%;height:100%;">
+        <img src="images/poster_reflection.jpg" alt="poster" style="width:100%;height:100%;">
       </div>
       <div class="flip-card-back">
 
@@ -78,23 +73,19 @@ ideas and current trends.
 </div>
 
 <section id="photos">
-  <img src="images/my_wrkspace.jpg" alt="contact";>
-  <img src="images/mygirls.jpg" alt="contact";>
-  <img src="images/cupcakes.jpg" alt="contact";>
-  <img src="images/pirates.jpg" alt="contact";>
-  <img src="images/3rdbday.jpg" alt="contact";>
-  <img src="images/twina.jpg" alt="contact";>
-  <img src="images/twinb.jpg" alt="contact";>
-  <img src="images/anbcreek.jpg" alt="contact";>
-  <img src="images/elsaanna.jpg" alt="contact";>
-  <img src="images/notjets.jpg" alt="contact";>
-  <img src="images/hiking.jpg" alt="contact";>
-  <img src="images/whaaat.jpg" alt="contact";>
-  <img src="images/volterra_werewolf.jpg" alt="contact";>
+  <img src="images/prya_persona1.jpg" alt="contact";>
+  <img src="images/sketches.jpg" alt="contact";>
+  <img src="images/persona_daydreamer.jpg" alt="contact";>
+  <img src="images/prya_persona.jpg" alt="contact";>
+  <img src="images/student_parentapp.jpg" alt="contact";>
+  <img src="images/civic_engagementsketches.jpg" alt="contact";>
+  <img src="images/student_appsketches.jpg" alt="contact";>
+  <img src="images/app_homepage.jpg" alt="contact";>
+  <img src="images/qoc_diagram.jpg" alt="contact";>
+  <img src="images/product_roadmap.jpg" alt="contact";>
 
 
 
-</section>
 
 
 
