--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 
 <div>
 <p>
-I graduate from University of Michigan April 2020. I earned a Bachelor’s Degree
+I graduate from University of Michigan May 2020. I earned a Bachelor’s Degree
 from University of Detroit Mercy in History and Museum Managment. After that I
 worked in Special Education for 6 years and am in fluent in both Braille languages.
 </p>
@@ -40,7 +40,7 @@ art work, wireframes and building hi-fidelity protypes.
 <div class="my-auto">
           <h2 class="mb-5">Resume</h2>
           <p class="mb-0"></p>
-          <iframe title= "Resume" height="900px" width= "900px" style="margin-bottom:60px;" src="images/resume.pdf"></iframe>
+          <iframe title= "Resume" height="900px" width= "900px" style="margin-bottom:60px;" src="images/resume2020.pdf"></iframe>
         </div>
 </body>
 </main>
